package rest.techpro.model;

public class Accessory extends Product {

	public Accessory(Brand brand, Category category, String label, double price, AccessoryName name) {
		super(brand, category, label, price);
	}

}
